@@ -1,3 +1,8 @@
+12 April 2017: Wouter
+	- subnet mem value is available in shm, also when not enabled,
+	  to make the struct easier to memmap by other applications,
+	  independent of the configuration of unbound.
+
 12 April 2017: Ralph
 	- Fix #1247: unbound does not shorten source prefix length when
 	  forwarding ECS.
